--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@ font-family:Arial, sans-serif;
 body{
 height:100vh;
 overflow:hidden;
-background:url("https://fons.grizly.club/uploads/posts/2025-06/26/1750922654029.jpg") no-repeat center center fixed;
+background:url("https://fons.grizly.club/uploads/posts/2025-06/26/1750922654029.jpg") center center no-repeat;
 background-size:cover;
 color:white;
+position:relative;
 }
 
 /* затемнение */
@@ -30,14 +31,20 @@ background:rgba(0,0,0,0.75);
 z-index:0;
 }
 
-/* слайды */
-.slider{
-display:flex;
-width:200%;
+/* слайдер */
+.slider-wrapper{
+width:100vw;
 height:100vh;
-transition:transform 0.7s cubic-bezier(.77,0,.18,1);
+overflow:hidden;
 position:relative;
 z-index:1;
+}
+
+.slider{
+display:flex;
+width:200vw;
+height:100%;
+transition:transform 0.6s ease;
 }
 
 .slide{
@@ -51,29 +58,21 @@ padding:20px;
 
 .card{
 width:100%;
-max-width:750px;
-background:rgba(0,0,0,0.55);
-backdrop-filter:blur(12px);
+max-width:820px;
+background:rgba(0,0,0,0.6);
+backdrop-filter:blur(14px);
 padding:40px;
-border-radius:25px;
-box-shadow:0 0 60px rgba(0,0,0,0.6);
+border-radius:28px;
+box-shadow:0 0 60px rgba(0,0,0,0.7);
 overflow-y:auto;
 max-height:88vh;
-}
-
-/* адаптация под телефон */
-@media (max-width:768px){
-.card{
-padding:25px;
-max-height:85vh;
-}
 }
 
 /* текст */
 .card h1{
 margin-bottom:25px;
 font-size:28px;
-text-shadow:0 0 10px rgba(255,255,255,0.3);
+text-shadow:0 0 14px rgba(255,255,255,0.35);
 }
 
 .card p{
@@ -83,24 +82,8 @@ animation:fadeUp 0.7s forwards;
 margin-bottom:10px;
 line-height:1.6;
 text-shadow:0 0 6px rgba(255,255,255,0.25);
+animation-delay:calc(var(--i) * 0.07s);
 }
-
-/* задержка по строкам */
-.card p:nth-child(1){animation-delay:0.1s}
-.card p:nth-child(2){animation-delay:0.2s}
-.card p:nth-child(3){animation-delay:0.3s}
-.card p:nth-child(4){animation-delay:0.4s}
-.card p:nth-child(5){animation-delay:0.5s}
-.card p:nth-child(6){animation-delay:0.6s}
-.card p:nth-child(7){animation-delay:0.7s}
-.card p:nth-child(8){animation-delay:0.8s}
-.card p:nth-child(9){animation-delay:0.9s}
-.card p:nth-child(10){animation-delay:1s}
-.card p:nth-child(11){animation-delay:1.1s}
-.card p:nth-child(12){animation-delay:1.2s}
-.card p:nth-child(13){animation-delay:1.3s}
-.card p:nth-child(14){animation-delay:1.4s}
-.card p:nth-child(15){animation-delay:1.5s}
 
 @keyframes fadeUp{
 to{
@@ -118,6 +101,25 @@ a:hover{
 text-decoration:underline;
 }
 
+/* Telegram */
+.telegram-btn{
+margin-top:20px;
+display:inline-block;
+padding:10px 22px;
+border-radius:25px;
+border:1px solid rgba(255,255,255,0.3);
+background:rgba(255,255,255,0.08);
+backdrop-filter:blur(10px);
+color:white;
+text-decoration:none;
+transition:0.3s;
+}
+
+.telegram-btn:hover{
+background:rgba(255,255,255,0.18);
+box-shadow:0 0 20px rgba(120,170,255,0.5);
+}
+
 /* точки */
 .dots{
 position:fixed;
@@ -126,7 +128,7 @@ left:50%;
 transform:translateX(-50%);
 display:flex;
 gap:12px;
-z-index:2;
+z-index:3;
 }
 
 .dot{
@@ -148,7 +150,7 @@ box-shadow:0 0 10px white;
 position:fixed;
 top:20px;
 left:20px;
-z-index:3;
+z-index:4;
 background:rgba(255,255,255,0.08);
 border:1px solid rgba(255,255,255,0.2);
 color:white;
@@ -163,92 +165,98 @@ transition:0.3s;
 background:rgba(255,255,255,0.15);
 }
 
-/* TELEGRAM кнопка */
-.telegram-btn{
-margin-top:20px;
-display:inline-block;
-padding:10px 22px;
-border-radius:25px;
-border:1px solid rgba(255,255,255,0.3);
-background:rgba(255,255,255,0.08);
-backdrop-filter:blur(10px);
-color:white;
-text-decoration:none;
-transition:0.3s;
+/* мобилка */
+@media (max-width:768px){
+
+body{
+background-attachment:scroll;
 }
 
-.telegram-btn:hover{
-background:rgba(255,255,255,0.18);
-box-shadow:0 0 20px rgba(120,170,255,0.5);
+.card{
+max-width:100%;
+padding:24px;
+max-height:85vh;
+border-radius:20px;
+}
+
+.card h1{
+font-size:22px;
+}
+
 }
 </style>
 </head>
-
 <body>
 
 <button class="music-btn" onclick="toggleMusic()">Музыка</button>
 
+<audio id="bgMusic" src="music.mp3" loop></audio>
+
+<div class="slider-wrapper">
 <div class="slider" id="slider">
 
-<!-- СЛАЙД 1 -->
+<!-- Слайд 1 -->
 <div class="slide">
 <div class="card">
 <h1>#vyxbio analytics</h1>
 
-<p><strong>РАССЛЕДОВАНИЯ</strong></p>
-<p>Экспресс-проверка личности: 9.99 USDT</p>
-<p>Полное досье (соцсети/связи): 24.99 USDT</p>
-<p>Мониторинг и история активности: 44.99 USDT</p>
+<p style="--i:1">РАССЛЕДОВАНИЯ</p>
+<p style="--i:2">Экспресс-проверка личности: 9.99 USDT</p>
+<p style="--i:3">Полное досье (соцсети/связи): 24.99 USDT</p>
+<p style="--i:4">Мониторинг и история активности: 44.99 USDT</p>
 
-<p><strong>ОБУЧЕНИЕ</strong></p>
-<p>Основы цифрового профилирования — 49.99 USDT</p>
-<p>Персональное наставничество.</p>
-<p>Сбор и анализ открытых источников (OSINT).</p>
-<p>Поиск утечек и метаданных.</p>
-<p>Обучение работе с API и парсерами.</p>
-<p>Практика: восстановление биографии по цифровому следу.</p>
+<p style="--i:5">ОБУЧЕНИЕ</p>
+<p style="--i:6">Основы цифрового профилирования — 49.99 USDT</p>
+<p style="--i:7">Персональное наставничество.</p>
+<p style="--i:8">Сбор и анализ открытых источников (OSINT).</p>
+<p style="--i:9">Поиск утечек и метаданных.</p>
+<p style="--i:10">Обучение работе с API и парсерами.</p>
+<p style="--i:11">Практика: восстановление биографии по цифровому следу.</p>
 
-<p><strong>СОФТ ПОД ЗАКАЗ</strong></p>
-<p>Боты/парсеры под твои задачи — от 24.99 USDT</p>
+<p style="--i:12">СОФТ ПОД ЗАКАЗ</p>
+<p style="--i:13">Боты/парсеры под твои задачи — от 24.99 USDT</p>
 
-<p><strong>АККАУНТЫ ТЕЛЕГРАМ</strong></p>
-<p>+7 (РФ) — 3.99 USDT</p>
-<p>+380 (Укр) — 4.99 USDT</p>
-<p>+1 (США/Канада) — 7.99 USDT</p>
+<p style="--i:14">АККАУНТЫ ТЕЛЕГРАМ</p>
+<p style="--i:15">+7 (РФ) — 3.99 USDT</p>
+<p style="--i:16">+380 (Укр) — 4.99 USDT</p>
+<p style="--i:17">+1 (США/Канада) — 7.99 USDT</p>
 
-<p>—</p>
-<p>по вопросам: @vyxeyes</p>
+<p style="--i:18">—</p>
+<p style="--i:19">по вопросам: @vyxeyes</p>
+<p style="--i:20">канал: <a href="https://t.me/vyxedith" target="_blank">https://t.me/vyxedith</a></p>
 
-<a href="https://t.me/vyxedith" target="_blank" class="telegram-btn">
-Перейти в Telegram
-</a>
+<a href="https://t.me/vyxedith" target="_blank" class="telegram-btn">Telegram</a>
 
 </div>
 </div>
 
-<!-- СЛАЙД 2 -->
+<!-- Слайд 2 -->
 <div class="slide">
 <div class="card">
 <h1>#vyxbio network</h1>
 
-<p><strong>ЦИФРОВАЯ АНАЛИТИКА</strong></p>
-<p>Поиск связей и скрытых аккаунтов.</p>
-<p>Анализ цифрового поведения.</p>
-<p>Восстановление удалённых данных.</p>
+<p style="--i:1">ЦИФРОВАЯ АНАЛИТИКА</p>
+<p style="--i:2">Поиск связей и скрытых аккаунтов.</p>
+<p style="--i:3">Анализ цифрового поведения.</p>
+<p style="--i:4">Восстановление удалённых данных.</p>
 
-<p><strong>АРХИВЫ И БАЗЫ</strong></p>
-<p>Работа с кэшами и снапшотами.</p>
-<p>Анализ утечек и метаданных.</p>
-<p>Сопоставление цифровых следов.</p>
+<p style="--i:5">АРХИВЫ И БАЗЫ</p>
+<p style="--i:6">Работа с кэшами и снапшотами.</p>
+<p style="--i:7">Анализ утечек и метаданных.</p>
+<p style="--i:8">Сопоставление цифровых следов.</p>
 
-<p><strong>ПРИВАТНОСТЬ</strong></p>
-<p>Аудит цифрового профиля.</p>
-<p>Настройка анонимности.</p>
-<p>Защита личных данных.</p>
+<p style="--i:9">ПРИВАТНОСТЬ</p>
+<p style="--i:10">Аудит цифрового профиля.</p>
+<p style="--i:11">Настройка анонимности.</p>
+<p style="--i:12">Защита личных данных.</p>
+
+<p style="--i:13">Работаем строго конфиденциально.</p>
+<p style="--i:14">Индивидуальный подход.</p>
 
 </div>
 </div>
 
+</div>
 </div>
 
 <div class="dots">
@@ -256,22 +264,19 @@ box-shadow:0 0 20px rgba(120,170,255,0.5);
 <div class="dot" onclick="goToSlide(1)"></div>
 </div>
 
-<audio id="bgMusic" src="music.mp3" loop></audio>
-
 <script>
-let current=0;
+let currentSlide=0;
 const slider=document.getElementById("slider");
 const dots=document.querySelectorAll(".dot");
-const music=document.getElementById("bgMusic");
-let playing=false;
 
 function goToSlide(index){
-current=index;
+currentSlide=index;
 slider.style.transform=`translateX(-${index*100}vw)`;
-dots.forEach(dot=>dot.classList.remove("active"));
+dots.forEach(d=>d.classList.remove("active"));
 dots[index].classList.add("active");
 }
 
+/* свайп */
 let startX=0;
 document.addEventListener("touchstart",e=>{
 startX=e.touches[0].clientX;
@@ -279,16 +284,20 @@ startX=e.touches[0].clientX;
 
 document.addEventListener("touchend",e=>{
 let endX=e.changedTouches[0].clientX;
-if(startX-endX>50&&current<1)goToSlide(current+1);
-if(endX-startX>50&&current>0)goToSlide(current-1);
+if(startX-endX>50) goToSlide(1);
+if(endX-startX>50) goToSlide(0);
 });
+
+/* музыка */
+const music=document.getElementById("bgMusic");
+let playing=false;
 
 function toggleMusic(){
 if(!playing){
 music.volume=0;
 music.play();
 let fade=setInterval(()=>{
-if(music.volume<1){
+if(music.volume<0.9){
 music.volume+=0.05;
 }else{
 clearInterval(fade);
